--- a/client/src/components/cards/cards.css
+++ b/client/src/components/cards/cards.css
@@ -1,6 +1,6 @@
 .Container{
     display: flex;
-    flex-flow: wrap;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-   
  }
