--- a/client/src/components/card/card.css
+++ b/client/src/components/card/card.css
@@ -1,17 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Imbue:opsz@10..100&display=swap');
 .card-container {
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(246, 8, 8, 0.47);
-    /* padding: 50px; */
-    margin: 20px;
-    text-align: center;
-    background-color: #f412124a;
-    font-family: Imbue;
-    width: 200px;
-    height: 350px;
-    position: relative;
-
-    top: 100px;
+  background-color: white;
+  width: 280px;
+  height: 500px;
+  border: solid 1px red;
+  border-radius: 4px;
+  color: black;
+  margin: 3rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   }
   
   .card-title {
@@ -32,13 +30,14 @@
   
  
   .card-image {
-    width: 200px;
-    height: 300px;
+    margin-top: 20px;
+    margin: 0 auto;
+    margin-bottom: -12px;
+    width: 150px;
+    height: 200px;
+    justify-self: center;
+    border-radius: 2px;
     object-fit: cover;
-    /* height: auto;
-    width: 100px;
-    margin-top: 10px;
-    border-radius: 5px; */
   }
 
   .cardlink {
