--- a/client/src/components/cards/cards.css
+++ b/client/src/components/cards/cards.css
@@ -1,6 +1,8 @@
 .Container{
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: row;
+    margin-left: 150px;
+    margin-top: 200px;
+    border-radius: 0px 0px 8px 8px;  
  }
