--- a/client/src/view/Home/home.css
+++ b/client/src/view/Home/home.css
@@ -4,4 +4,17 @@ body {
     place-items: center;
     min-width: 320px;
     min-height: 100vh;
+    background-image: url("https://getwallpapers.com/wallpaper/full/7/e/2/544045.jpg");
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+
+}
+
+.paginacion {
+    text-align: center;
 }
