--- a/client/src/view/Landing/landing.css
+++ b/client/src/view/Landing/landing.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-evenly;
     height: 100vh;
-    width: 100vw; /* Cambia el color de fondo según tus preferencias */
+    width: 100vw; 
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -18,7 +18,7 @@
 .enter-link {
   display: inline-block;
     padding: 10px 20px;
-    background-color: #0a000000; /* Cambia el color del botón según tus preferencias */
+    background-color: #0a000000; 
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
@@ -29,7 +29,7 @@
 }
 
 .enter-link:hover {
-  background-color: #121011; /* Cambia el color de fondo del botón al pasar el mouse */
+  background-color: #121011; 
 }
 
 .entrar {
@@ -53,7 +53,7 @@
  footer {
   text-align: center;
   padding: 1rem 0;
-  background-color: rgba(3, 3, 7, 0.705) ; /* Agrega un fondo semitransparente para que el texto sea legible */
+  background-color: rgba(3, 3, 7, 0.705) ; 
   width: 100%; 
   color: azure;
   margin-top: -50px;
