--- a/client/src/view/Form/Form.css
+++ b/client/src/view/Form/Form.css
@@ -15,6 +15,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background-color: rgb(52, 51, 51);
   }
   
   .form label {
